OO-3303: Avoid flickering when changing slider value

--- a/src/main/webapp/static/themes/light/modules/_thirdparty.scss
+++ b/src/main/webapp/static/themes/light/modules/_thirdparty.scss
@@ -106,6 +106,10 @@
 /*
  * slider
  */
+ 
+.o_slider_wrapper {
+	height:33px;
+}
 
 .ui-slider.ui-slider-horizontal.ui-widget-content {
 	border-color: $o-slider-border;
